--- a/frontend/src/style/variables.scss
+++ b/frontend/src/style/variables.scss
@@ -2,3 +2,12 @@ $colorPrimaryOrange: #fcc002;
 $colorPrimaryBlue: #008eff;
 $colorPrimaryBlueDark: #037ee1;
 $colorSecondaryBlueLight: #009dff;
+
+$fontSizeTitleDesktop: 3.2rem;
+$fontSizeSubtitleDesktop: 1.8rem;
+
+$fontSizeTitleTablet: 2.8rem;
+$fontSizeSubtitleTablet: 1.4rem;
+
+$fontBtnTitleDesktop: 2rem;
+$fontBtnTitleTablet: 1.6rem;
