--- a/frontend/src/components/Flights/DepDestItem/DepDestItem.module.scss
+++ b/frontend/src/components/Flights/DepDestItem/DepDestItem.module.scss
@@ -5,7 +5,11 @@
   grid-template-columns: 1fr 1fr 1fr;
   width: 34rem;
 
-  @media screen and (max-width: 64rem) {
+  @media screen and (max-width: 47.9em) {
+    width: 100%;
+  }
+
+  @media screen and (min-width: 48em) and (max-width: 64rem) {
     width: 28rem;
   }
 }
