--- a/frontend/src/components/Flights/FligthCard/FligthCard.module.scss
+++ b/frontend/src/components/Flights/FligthCard/FligthCard.module.scss
@@ -2,8 +2,16 @@
 
 .detailsBox {
   background-color: $colorSecondaryBlueLight;
+  width: 72.8rem;
+  transition: height 0.5s;
 
-  transition: all 0.5s;
+  @media screen and (max-width: 47.9em) {
+    width: 100%;
+  }
+
+  @media screen and (min-width: 48em) and (max-width: 64rem) {
+    width: 53.9rem;
+  }
 }
 
 // Mobile: 375px -> 767px
@@ -16,12 +24,12 @@
   justify-content: flex-end;
   background-color: white;
 
-  @media screen and (max-width: 48em) {
-    width: 53.9rem;
-    background-color: rgb(221, 255, 0);
+  @media screen and (max-width: 47.9em) {
+    width: 100%;
+    flex-direction: column;
   }
 
-  @media screen and (max-width: 64rem) {
+  @media screen and (min-width: 48em) and (max-width: 64rem) {
     width: 53.9rem;
   }
 
@@ -52,7 +60,17 @@
   & hr {
     border: 0.5px solid rgba(0, 0, 0, 0.513);
     width: 90%;
-    margin-left: 1rem;
+    margin-left: 2rem;
+
+    @media screen and (max-width: 47.9em) {
+      width: 96%;
+      margin: auto;
+    }
+
+    @media screen and (min-width: 48em) and (max-width: 64rem) {
+      width: 91%;
+      margin-left: 1rem;
+    }
   }
 
   & .paddingBox {
@@ -62,7 +80,12 @@
     justify-content: space-between;
     align-items: center;
 
-    @media screen and (max-width: 64rem) {
+    @media screen and (max-width: 47.9em) {
+      justify-content: center;
+      padding: 2rem 4rem 2rem 1rem;
+    }
+
+    @media screen and (min-width: 48em) and (max-width: 64rem) {
       padding: 2rem 4rem 2rem 1rem;
     }
   }
@@ -70,7 +93,15 @@
   & img {
     height: 4rem;
 
-    @media screen and (max-width: 64rem) {
+    @media screen and (max-width: 47.9em) {
+      height: 3rem;
+      align-self: flex-start;
+      justify-self: flex-end;
+      margin-top: -1.5rem;
+      // margin-left: -0.5rem;
+    }
+
+    @media screen and (min-width: 48em) and (max-width: 64rem) {
       height: 3rem;
       align-self: flex-start;
       justify-self: flex-end;
@@ -90,6 +121,13 @@
   align-items: flex-start;
   min-width: 23rem;
   padding: 2rem;
+
+  @media screen and (max-width: 48em) {
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 1rem !important;
+    width: 100%;
+  }
 
   @media screen and (max-width: 64rem) {
     min-width: 18.5rem;
@@ -123,5 +161,11 @@
     top: 50%;
     left: 0rem;
     transform: translate(-50%, -50%) rotate(45deg);
+
+    @media screen and (max-width: 48em) {
+      top: 0;
+      left: 50%;
+      transform: translate(-50%, -50%) rotate(45deg);
+    }
   }
 }
