ConfirmationPage, Message Component, ErrorMessage, Button 'Refresh a page'

--- a/frontend/src/components/Flights/FligthCard/FligthCard.module.scss
+++ b/frontend/src/components/Flights/FligthCard/FligthCard.module.scss
@@ -138,6 +138,7 @@
     font-size: $fontSizeTitleDesktop;
     font-weight: 700;
     margin-bottom: 1rem;
+    line-height: 1;
 
     & span {
       font-size: $fontSizeSubtitleDesktop;
