--- a/frontend/src/style/variables.scss
+++ b/frontend/src/style/variables.scss
@@ -2,6 +2,7 @@ $colorPrimaryOrange: #fcc002;
 $colorPrimaryBlue: #008eff;
 $colorPrimaryBlueDark: #037ee1;
 $colorSecondaryBlueLight: #009dff;
+$colorError: #ff0000;
 
 $fontSizeTitleDesktop: 3.2rem;
 $fontSizeSubtitleDesktop: 1.8rem;
