--- a/frontend/src/style/variables.scss
+++ b/frontend/src/style/variables.scss
@@ -4,11 +4,14 @@ $colorPrimaryBlueDark: #037ee1;
 $colorSecondaryBlueLight: #009dff;
 $colorError: #ff0000;
 
+// DESKTOP FONT
 $fontSizeTitleDesktop: 3.2rem;
 $fontSizeSubtitleDesktop: 1.8rem;
+// Btn:
+$fontBtnTitleDesktop: 2rem;
 
+// TABLET
 $fontSizeTitleTablet: 2.8rem;
 $fontSizeSubtitleTablet: 1.4rem;
-
-$fontBtnTitleDesktop: 2rem;
+// Btn:
 $fontBtnTitleTablet: 1.6rem;
