--- a/frontend/src/components/shared/Buttons/BigButton/BigButton.module.scss
+++ b/frontend/src/components/shared/Buttons/BigButton/BigButton.module.scss
@@ -18,7 +18,10 @@
     padding: 1rem 2rem;
   }
 
-  //   &:active {}
+  &:active {
+    background-color: $colorPrimaryBlueDark;
+    transform: scale(0.95);
+  }
 
   &:hover {
     background-color: $colorPrimaryBlueDark;
