--- a/frontend/src/components/shared/Buttons/LinkButton/LinkButton.module.scss
+++ b/frontend/src/components/shared/Buttons/LinkButton/LinkButton.module.scss
@@ -14,6 +14,10 @@
     color: $colorPrimaryBlue;
   }
 
+  &:active {
+    color: $colorPrimaryBlueDark;
+  }
+
   @media screen and (max-width: 64rem) {
     font-size: 1rem;
   }
