--- a/frontend/src/components/shared/Inputs/Select/Select.module.scss
+++ b/frontend/src/components/shared/Inputs/Select/Select.module.scss
@@ -3,9 +3,12 @@
 .selectContainer,
 .selectContainer {
   font-size: 1.4rem;
-  margin: 1rem 1rem 0.5rem 0;
+  margin: 1rem 1rem 1rem 0;
 
   & select {
+    box-shadow: none;
+    outline: none;
+
     font-size: 1.4rem;
     font-weight: 700;
     color: #131313;
