--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -2,9 +2,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  // &:focus {
-  //     outline: none;
-  // }
 }
 
 html {
@@ -15,9 +12,8 @@ body {
   margin: 0;
 
   font-family: "Montserrat", sans-serif;
-  // font-family: -apple-system, BlinkMacSystemFont, Montserrat, sans-serif;
-  // -webkit-font-smoothing: antialiased;
-  // -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 
   background-color: #f2f2f2;
 }
