--- a/frontend/src/components/Flights/PriceButtonBox/PriceButtonBox.module.scss
+++ b/frontend/src/components/Flights/PriceButtonBox/PriceButtonBox.module.scss
@@ -1,4 +1,4 @@
-@import "../../../style/variables";
+@import "@/style/variables";
 
 .priceAndButton {
   background-color: $colorPrimaryOrange;
@@ -8,7 +8,7 @@
   flex-direction: column;
   justify-content: flex-end;
   align-items: flex-start;
-  min-width: 23.5rem;
+  min-width: 24rem;
   padding: 2rem;
 
   @media screen and (max-width: 47.9em) {
