--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -12,6 +12,8 @@ body {
   margin: 0;
 
   font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
